# protorec

./: .pre-commit-config.yaml  README.md  dev.py  pyproject.toml
.github/workflows/: code-quality.yml  main2develop.yaml  release.yml
protorec/: README.md  __init__.py  app.py  cli.py  routes.py  wsgi.py
protorec/configs/: cameras_config.json  cameras_config_all.json
protorec/pipelines/: __init__.py  pipeline.py  pipeline_abc.py  rgb_pipeline.py  thermal_pipeline.py
protorec/systemd/: __init__.py  install.py  protorec.service
protorec/templates/: index.html
