[project]
name = "protorec"
dynamic = ['version']
description = "A lightweight recording tool for capturing data from early-stage prototypes and experimental hardware."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "psutil>=7.0.0",
    "waitress>=3.0.0",
]

[project.scripts]
protorec-app = "protorec.app:run" # Development server

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "protorec.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["protorec*"]

[tool.setuptools.package-data]
protorec = ["templates/*", "static/**/*"]

# Pylint settings
[tool.pylint]
disable = [
    "unspecified-encoding",
    "wrong-import-position",
    "relative-beyond-top-level",
]

[dependency-groups]
dev = ["pre-commit>=3.5.0"]
